feat, fix: Complete Cars transport methods, fix repository delete car method
